# EasyEngineCore

./: .gitignore  .gitmodules  CMakeLists.txt  CmakePresets.json
Easy/: mod.ixx
Easy/Core/: Application.cpp  Application.ixx  ApplicationContext.ixx  Basic.ixx  Buffer.ixx  Context.ixx  Defines.ixx  Engine.cpp  Engine.ixx  FileSystem.ixx  Input.cpp  Input.ixx  KeyCodes.ixx  Layer.ixx  LayerStack.ixx  MacroUtils.hpp  MacroUtils.hu  MacroUtils.ixx  MouseCodes.ixx  Profile.ixx  UUID.ixx  Util.ixx  Window.ixx  mod.ixx
Easy/Events/: ApplicationEvent.ixx  ApplicationEvents.ixx  Event.ixx  KeyEvents.ixx  MouseEvents.ixx  mod.ixx
Easy/ImGui/: ImGui.ixx  ImGuiLayer.cpp  ImGuiLayer.ixx  OpenGLImGuiLayer.ixx  imgui_nostatic.h  mod.ixx
Easy/Math/: Misc.ixx  Transforms.ixx  mod.ixx
Easy/PCH/: OpenGL.pch
Easy/Physics/: Physics2D.ixx
Easy/Platform/: OpenGLEngineContext.cpp  OpenGLEngineContext.ixx  WindowsWindow.cpp  WindowsWindow.ixx  mod.ixx
Easy/Platform/Impl/: OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.ixx  OpenGLWindow.cpp  OpenGLWindow.ixx  mod.ixx
Easy/Platform/Impl/OpenGL/: GLFW_OpenGL.hpp  ImGui.ixx  ImGuiLayer.cpp  ImGuiLayer.ixx  Window.cpp  Window.ixx  mod.ixx
Easy/Platform/Impl/OpenGL/Renderer/: Buffer.cpp  Buffer.ixx  FrameBuffer.cpp  FrameBuffer.ixx  GraphicsContext.cpp  GraphicsContext.ixx  RendererAPI.cpp  RendererAPI.ixx  Shader.cpp  Shader.ixx  ShaderSources.ixx  Texture.cpp  Texture.ixx  UniformBuffer.cpp  UniformBuffer.ixx  VertexArray.cpp  VertexArray.ixx  mod.ixx
Easy/Platform/Impl/Windows/: Window.cpp  Window.ixx  WindowsInput.cpp  WindowsInput.ixx  mod.ixx
Easy/Project/: Project.cpp  Project.ixx  ProjectSerializer.cpp  ProjectSerializer.ixx
Easy/Renderer/: Buffer.cpp  Buffer.ixx  Camera.ixx  EditorCamera.cpp  EditorCamera.ixx  Font.cpp  Font.ixx  FrameBuffer.cpp  FrameBuffer.ixx  GraphicsContext.cpp  GraphicsContext.ixx  MSDFData.ixx  OrthographicCamera.cpp  OrthographicCamera.ixx  OrthographicCameraController.cpp  OrthographicCameraController.ixx  RenderCommand.ixx  Renderer.cpp  Renderer.ixx  Renderer2D.cpp  Renderer2D.ixx  RendererAPI.cpp  RendererAPI.ixx  RendererCommand.ixx  Shader.cpp  Shader.ixx  ShaderSources.ixx  Texture.cpp  Texture.ixx  UniformBuffer.cpp  UniformBuffer.ixx  VertexArray.cpp  VertexArray.ixx  mod.ixx
Easy/Scene/: Components.ixx  ComponentsInternal.h  Entity.cpp  Entity.ixx  EntityInternal.h  Scene.cpp  Scene.ixx  SceneCamera.cpp  SceneCamera.ixx  SceneInternal.h  SceneSerializer.ixx  SceneSerializerInternal.h  ScriptableEntity.ixx  ScriptableEntityInternal.h  mod.ixx
Easy/Scripting/: JTypes.ixx  JniBind.cpp  JniBind.ixx  JniBindBasic.ixx  KNativeArrays.ixx  KNativeFunctions.ixx  NativeBuffer.ixx  ScriptEngine.cpp  ScriptEngine.ixx  ScriptGlue.cpp  ScriptGlue.ixx  mod.ixx
Ez/Core/: Defines.ixx
